--- a/data/tareas.json
+++ b/data/tareas.json
@@ -4,6 +4,7 @@
       "id": 1,
       "title": "tarea 1",
       "description": "descripcion de la tarea 1",
+      "completed": false,
       "createdAt": "2021-09-01T00:00:00.000Z"
     },
     {
@@ -19,6 +20,13 @@
       "description": "Descripcion de la tarea 3",
       "completed": false,
       "createdAt": "2021-09-01T00:00:00.000Z"
+    },
+    {
+      "id": 4,
+      "title": "nueva tarea",
+      "description": "nueva tarea",
+      "completed": false,
+      "createdAt": "2025-03-24T17:57:28.460Z"
     }
   ]
 }
